@@ -1,6 +1,6 @@
 Package: RMark
 Version: 2.1.1
-Date: 2012-04-21
+Date: 2012-04-23
 Title: R Code for MARK Analysis
 Author: Jeff Laake <jeff.laake@noaa.gov> with contributions
     from Eldar Rakhimberdiev, Bret Collier, Jay Rotella and
