@@ -5,7 +5,8 @@
   make.mark.model(data, ddl, parameters = list(),
     title = "", model.name = NULL, initial = NULL,
     call = NULL, default.fixed = TRUE, options = NULL,
-    profile.int = FALSE, chat = NULL)
+    profile.int = FALSE, chat = NULL, simplify = TRUE,
+    input.links = NULL, parm.specific = FALSE)
 }
 \arguments{
   \item{data}{Data list resulting from function
@@ -41,6 +42,15 @@
 
   \item{chat}{pre-specified value for chat used by MARK in
   calculations of model output}
+
+  \item{simplify}{if FALSE, does not simplify PIM
+  structure}
+
+  \item{input.links}{specifies set of link functions for
+  parameters with non-simplified structure}
+
+  \item{parm.specific}{if TRUE, forces a link to be
+  specified for each parameter}
 }
 \value{
   model: a MARK object except for the elements
